dev  2012-04-12

* Perlito5 (Perl 5 compiler):

-- option "-B" is now the default; this executes immediately:  perlito5 -e 'say "ok"'
-- option "-MO=Deparse":
   $ node perlito5.js -Isrc5/lib -MO=Deparse -e ' while (1) { say "works" } '

- parser:

-- autoquote hash-keys fix
-- string interpolation in m//

- javascript backend:

-- negative index in array


* Perlito6 (Perl 6 compiler):



9.0  2012-04-11

* Perlito5 (Perl 5 compiler):

- parser:

-- there is now an internal "grammar API"; new words can be added to the grammar from inside perl5 modules;
   The non-standard "token" grammar was moved to a module
-- here-docs
-- new Perl5-in-Perl6 backend (experimental)
-- new option -Bjs/-Bperl5
-- new option -Cast-perl5
-- added option -I
   Note: -I./src5/lib is required to compile the compiler and also to run some of the tests
-- runs some tests from the perl5 test suite (pmurias++)
-- implemented prototypes (function signatures)
-- "use", import/unimport; "use strict"/"no strict"

- perl5 backend:

-- use native data structures and ops

- javascript backend:

-- works on node-js (pmurias++)
-- @ISA and inheritance
-- %ENV, @ARGV
-- simple regexes (using javascript native regex)
-- symbol tables/typeglobs
-- references
-- "local", "our"; goto &sub
-- wantarray; each; __PACKAGE__
-- native javascript can be accessed with JS::inline('string')
-- reduced generated code size; emitted code is more optimized and better formatted
-- cleanup unused modules from the browser backend

- javascript backend regressions:

-- the d8 shell (v8 javascript) doesn't support some file system functions needed by the compiler
-- perlito5 calling convention is incompatible with native javascript
   The last commit using native javascript calls is "e1e3316b"

* Perlito6 (Perl 6 compiler):
- compiler namespace moved from Perlito to Perlito6



8.0  2011-12-24
- added new compiler for Perl version 5.

* Perlito Perl 5:
- command line "perlito5.pl"
- supported backends: Perl 5, Javascript